# finalcut-cmake

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/final/: fconfig.h
src/final/dialog/: fmessagebox.cpp
src/final/widget/: fscrollview.cpp
